@@ -12,7 +12,9 @@ documents those changes that are of interest to users and admins.
  -- Add support for partition configuration "Shared=exclusive". This is 
     equivalent to "srun --exclusive" when select/cons_res is configured.
  -- In sched/wiki2, report the reason for a node being unavailable for the 
-    GETNODES command using the CAT="<reason>" field
+    GETNODES command using the CAT="<reason>" field.
+ -- In sched/wiki2 with select/linear, duplicate hostnames in HOSTLIST, one
+    per allocated processor.
 
 * Changes in SLURM 1.2.11
 =========================
